# TicTacToe

./: .gitignore  ChangeLog.md  LICENSE  README.md  TicTacToe.cabal  default.nix  package.yaml  shell.nix
app/: Main.hs
nix/: sources.json
src/: Main.hs
src/Game/: Window.hs
src/MyLibrary/: Lib.hs
