cabal-version: 1.12

name:           TicTacToe
version:        0.1.1.0
description:    Please see the README on GitHub at <https://github.com/githubuser/TicTacToe#readme>
homepage:       https://github.com/githubuser/TicTacToe#readme
bug-reports:    https://github.com/githubuser/TicTacToe/issues
author:         BlackBlack667
maintainer:     example@example.com
copyright:      2021 BlackBlack667
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/TicTacToe

library
  exposed-modules:
      Lib
  other-modules:
      Paths_TicTacToe,
      Window
  hs-source-dirs:
      src/MyLibrary,
      src/Game
  build-depends:
      base >=4.7 && <5,
      bytestring,
      bmp,
      gloss
  default-language: Haskell2010
  -- We have to do this because our gloss/GLUT dependencies don't automatically
  -- propagate this C dependency for some reason
  if os(windows)
    pkgconfig-depends:
      freeglut
  else
    pkgconfig-depends:
      glut

executable TicTacToe-exe
  main-is: Main.hs
  other-modules:
      Paths_TicTacToe
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      TicTacToe
    , base >=4.7 && <5
  default-language: Haskell2010

test-suite TicTacToe-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_TicTacToe
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      TicTacToe
    , base >=4.7 && <5
  default-language: Haskell2010
